--- a/backend/teste-pratico/bin/src/main/resources/application.properties
+++ b/backend/teste-pratico/bin/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/teste-pratico
+spring.datasource.url=jdbc:postgresql://localhost:5433/teste-pratico
 spring.datasource.username=postgres
 spring.datasource.password=Fs256811
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,5 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
 spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
